feat: add route history, ui update
